初步实现数据显示

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_one"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gank"
             android:icon="@android:drawable/ic_menu_compass"
@@ -16,21 +18,21 @@
             android:title="@string/nav_item_title3" />
     </group>
 
-    <item android:title="其它">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@android:drawable/ic_menu_crop"
-                android:title="@string/nav_item_title4" />
-            <item
-                android:id="@+id/nav_set"
-                android:icon="@android:drawable/ic_menu_share"
-                android:title="@string/nav_item_title5" />
-            <item
-                android:id="@+id/nav_about"
-                android:icon="@android:drawable/ic_menu_help"
-                android:title="@string/nav_item_title4" />
-        </menu>
-    </item>
+    <group
+        android:id="@+id/group_two"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@android:drawable/ic_menu_crop"
+            android:title="@string/nav_item_title4" />
+        <item
+            android:id="@+id/nav_set"
+            android:icon="@android:drawable/ic_menu_share"
+            android:title="@string/nav_item_title5" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@android:drawable/ic_menu_help"
+            android:title="@string/nav_item_title6" />
+    </group>
 
 </menu>
