--- a/app/src/main/res/layout/fragment_type_item_layout.xml
+++ b/app/src/main/res/layout/fragment_type_item_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/type_item_swiprefreshlayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/type_item_recyclerView"
@@ -11,4 +11,4 @@
         android:overScrollMode="never"
         android:scrollbars="none" />
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
