--- a/app/src/main/res/layout/item_gank_layout.xml
+++ b/app/src/main/res/layout/item_gank_layout.xml
@@ -1,22 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/gank_item_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_centerVertical="true"
+        android:layout_margin="10dp"
         android:background="@mipmap/ic_launcher" />
 
-    <TextView
-        android:id="@+id/gank_item_desc"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/gank_item_icon"
-        android:textSize="16sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/gank_item_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/gank_item_icon"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/gank_item_who"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="daimajia" />
+
+            <TextView
+                android:id="@+id/gank_item_publishedat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2016" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
