--- a/app/src/main/res/layout/activity_gank_item_detail.xml
+++ b/app/src/main/res/layout/activity_gank_item_detail.xml
@@ -4,21 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/gank_item_detail_toolbar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:title="加载中..."
-        app:titleTextColor="#ffffff" />
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/gank_item_detail_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="@string/load_start_tip" />
+
+    </android.support.design.widget.AppBarLayout>
+
 
     <ProgressBar
         android:id="@+id/gank_item_detail_progress"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@id/gank_item_detail_toolbar" />
+        android:layout_below="@id/app_bar" />
 
     <WebView
         android:id="@+id/gank_item_detail_webview"
