--- a/app/src/main/res/layout/fragment_type_item_layout.xml
+++ b/app/src/main/res/layout/fragment_type_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,4 +10,13 @@
         android:overScrollMode="never"
         android:scrollbars="none" />
 
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/type_item_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/to_top"
+        android:visibility="gone" />
+
+</android.support.design.widget.CoordinatorLayout>
