--- a/app/src/main/res/layout/load_start_layout.xml
+++ b/app/src/main/res/layout/load_start_layout.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
+    <com.wang.avi.AVLoadingIndicatorView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/load_error" />
+        app:indicatorColor="@color/colorAccent"
+        app:indicatorName="LineScalePulseOutIndicator" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/load_failed_tip"
+        android:text="@string/load_start_tip"
         android:textSize="16sp" />
 
 </LinearLayout>
