--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,4 +8,13 @@
         <item>瞎推荐</item>
         <item>拓展资源</item>
     </string-array>
+
+    <string-array name="girl">
+        <item>大胸妹</item>
+        <item>小翘臀</item>
+        <item>黑丝袜</item>
+        <item>美腿控</item>
+        <item>有颜值</item>
+        <item>大杂烩</item>
+    </string-array>
 </resources>
