--- a/app/src/main/res/layout/activity_gank_detail.xml
+++ b/app/src/main/res/layout/activity_gank_detail.xml
@@ -17,7 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/load_start_tip" />
+            app:title="@string/load_loading_tip" />
 
     </android.support.design.widget.AppBarLayout>
 
