--- a/app/src/main/res/layout/load_start_layout.xml
+++ b/app/src/main/res/layout/load_start_layout.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/load_start_tip"
+        android:text="@string/load_loading_tip"
         android:textSize="16sp" />
 
 </LinearLayout>
