优化RecyclerView瀑布流

--- a/app/src/main/res/layout/fragment_type_item_layout.xml
+++ b/app/src/main/res/layout/fragment_type_item_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
-            android:scrollbars="none" />
+            android:scrollbars="vertical" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
