--- a/app/src/main/res/layout/item_girl_layout.xml
+++ b/app/src/main/res/layout/item_girl_layout.xml
@@ -5,11 +5,9 @@
     android:layout_margin="2dp"
     android:foreground="?attr/selectableItemBackground">
 
-    <ImageView
+    <com.otherhshe.niceread.ui.weiget.ScaleImageView
         android:id="@+id/girl_item_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="300dp"
         android:scaleType="fitXY" />
 </android.support.v7.widget.CardView>
