--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -20,7 +20,7 @@
 
     <group
         android:id="@+id/group_two"
-        android:checkableBehavior="single">
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/share"
