--- a/app/src/main/res/layout/activity_gank_detail.xml
+++ b/app/src/main/res/layout/activity_gank_detail.xml
@@ -8,14 +8,15 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/gank_detail_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:paddingTop="@dimen/toolbar_padding_top"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="@string/load_loading_tip" />
 
