--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -12,10 +12,6 @@
             android:id="@+id/nav_girl"
             android:icon="@drawable/girl"
             android:title="@string/girl" />
-        <item
-            android:id="@+id/nav_video"
-            android:icon="@drawable/video"
-            android:title="@string/video" />
     </group>
 
     <group
@@ -28,7 +24,7 @@
         <item
             android:id="@+id/nav_set"
             android:icon="@drawable/setting"
-            android:title="@string/setting" />
+            android:title="@string/set" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/about"
