--- a/app/src/main/res/layout/load_end_layout.xml
+++ b/app/src/main/res/layout/load_end_layout.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical">、
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:text="@string/load_failed_tip" />
-
+        android:text="@string/load_end_tip" />
 </LinearLayout>
