--- a/app/src/main/res/layout/item_gank_layout.xml
+++ b/app/src/main/res/layout/item_gank_layout.xml
@@ -17,7 +17,7 @@
             android:layout_height="60dp"
             android:layout_centerVertical="true"
             android:layout_margin="10dp"
-            android:background="@mipmap/ic_launcher"
+            android:src="@drawable/web"
             android:transitionName="shareView" />
 
         <LinearLayout
